    instead of null.
  - Fixed a bug that prevented the new directory structure to find the defined
    functions.
    This bug has been in XINS since version 0.169.
  - Fixed a bug that didn't take the shared instance with the new directory
    structure.
    This bug has been in XINS since version 0.169.

* Build and release process:
  - Put the logdoc package in a apart jar file (logdoc.jar).

* Generated build file:
  - Added a "clients" target that builds all the client api's for all the
    projects.
  - Added a ant mapper to copy the type files that changes the first character
    to an uppercase if needed.
  - Set the construction of the war file as last argument for the targets
    server-<api> and all-<api>.
  - The create-api target now asks you if you want to create the
    implementation and define some environments.

* Generated specification documentation:
  - Added a link to download the client zip file.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.182:

* XINS/Java Client Framework:
  - Added backward compatibility for the result. The method isSuccess() is now
    based on the fact that no errorcode or code is returned.
  - Improved description of 'parameters' argument in class XINSServiceCaller,
    in the call(...) methods.

* XINS/Java Common Library:
  - Added a regression test for the PatternType.

* Generated specification:
  - Added a text specifying that a result code is returned when an error
    occured.

* Documentation
  - Changed the chapters so that for each subject a HTML page is generated.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.181:

* XINS/Java Common Library:
  - Changed the EnumItem to the old constructor as the static Item are not
    initialized yet when the constructor is invoked.
    This bug has been in XINS since the version 0.180.

* Build and release process: